# models/Product.js
@@ -1,0 +1,17 @@
+const { Schema, model } = require('mongoose');
+
+const ProductSchema = new Schema(
+  {
+    name: { type: String, required: true, trim: true },
+    description: { type: String, trim: true },
+    category: { type: Schema.Types.ObjectId, ref: 'Category' },
+    colors: [{ type: Schema.Types.ObjectId, ref: 'Color' }],
+    price: { type: Number },
+    isActive: { type: Boolean, default: true },
+    createdBy: { type: Schema.Types.ObjectId, ref: 'User' },
+  },
+  { timestamps: true }
+);
+
+module.exports = model('Product', ProductSchema);
+
